# Demos

./: .gitignore  LICENSE  README.md
AshmemDemo/: README.md  settings.gradle.kts
AshmemDemo/app/: build.gradle.kts
AshmemDemo/app/src/main/cpp/: CMakeLists.txt  native_shm.cpp  shared_block.h
AshmemDemo/gradle/: libs.versions.toml
BleDemo/: BleDemo.apk  README.md
BleDemo/app/: build.gradle
CountdownDemo/: CountdownDemo.apk  README.md
CountdownDemo/app/: build.gradle
DataBindingDemo/: DataBindingDemo.apk  README.md
DragFillBlankQuestionDemo/: DragFillBlankQuestionDemo.apk  README.md  gradle.properties
DrawTextDemo/: DrawTextDemo.apk  README.md
FillBlankQuestionDemo/: FillBlankQuestionDemo.apk  README.md
IjkPlayerDemo/: README.md  settings.gradle.kts
IndicatorSeekBarDemo/: IndicatorSeekBarDemo.apk  README.md
MPAndroidChartDemo/: MPAndroidChartDemo.apk  README.md
MVPDemo/: MVPDemo.apk  README.md
MVVMDemo/: MVVMDemo.apk
NDKDemo/: NDKDemo.apk  README.md  build.gradle
NDKLibraryDemo/: NDKLibraryDemo.apk  README.md  settings.gradle
NanoHttpdDemo/: README.md  settings.gradle
RecyclerViewRefreshDemo/: README.md  RecyclerViewRefreshDemo.apk  gradle.properties
RetrofitCacheDemo/: README.md  build.gradle  settings.gradle
RetrofitDemo/: README.md  RetrofitDemo.apk
RxLifecycleDemo/: README.md  RxLifecycleDemo.apk  build.gradle
SwitchViewDemo/: README.md  SwitchViewDemo.apk
TranslucentPaintDemo/: README.md  TranslucentPaintDemo.apk  settings.gradle
UiAutomatorDemo/: README.md
VirtualAPKDemo/: README.md  host.apk  plugin.apk
(+375 files in other folders)
